<resources>
    <string name="app_about">About</string>
    <string name="about_device">Device</string>
    <string name="about_account">Account</string>
    <string name="about_version">Version</string>
    <string name="app_name">24 News</string>
    <string name="no_more_tips_for_today">No more tips for today 😊</string>
    <string name="email">Email Address</string>
    <string name="phone">Mobile Number</string>
    <string name="get_otp">GET OTP</string>
    <string name="proceed">PROCEED</string>
    <string name="otp_sent_txt">An OTP has been sent by SMS and Email.</string>
    <string name="resend">RESEND OTP</string>
    <string name="proceed_btn">PROCEED</string>
    <string name="close_btn">Close</string>
    <string name="skip_btn">SKIP</string>
    <string name="no_videos">No videos found.</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="more">More</string>
    <string name="permission_sms_denied">Receive SMS Permission denied, OTP will not be auto filled.</string>
    <string name="powered_by">Powered By</string>
    <string name="screen_title_help">Help</string>
    <string name="screen_title_color">#FFFFFF</string>
    <string name="app_background_image">https://s3.ap-south-1.amazonaws.com/flowerstv-docs/Images/app-bg.jpg</string>
    <string name="screen_title_favorites">Favourites</string>
    <string name="screen_title_search">Search Videos</string>
    <string name="favourite_videos_screen_no_data_hint">Your favourite videos will appear here.</string>
    <string name="search_videos_screen_no_data_hint">Search for Channels, TV Shows, Movies....</string>
    <string name="common_videos_screen_no_data_hint">Videos will appear here.</string>

    <string name="hint_search">Search</string>
    <string name="hint_home">Home</string>
    <string name="text_search">Search</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="search_results">Search Results</string>
    <string name="device_model">Model      </string>
    <string name="device_build">Build      </string>
    <string name="device_version">Version  </string>
    <string name="app_version">App Version </string>
    <string name="os_api">OS API :</string>
    <string name="device_seriel">Seriel    </string>
    <string name="language_check">LANGUAGE_LOGIN</string>
    <string name="languages_check">LANGUAGES</string>
    <string name="poll_check">POLLS</string>
    <string name="my_list">My List</string>
    <string name="my_share">Share</string>
    <string name="my_rate">Rate</string>
    <string name="my_download">Download</string>
    <string name="my_genre">All Genre</string>
</resources>
