<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_35sdp"
        android:src="@drawable/rsz_download24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/otp_sent_txt"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp" />

    <com.balysv.materialripple.MaterialRippleLayout
        rv_centered="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        app:mrl_rippleAlpha="0.4"
        app:mrl_rippleColor="@color/white"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_12sdp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/btn_edit"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="@drawable/ic_action_edit" />

        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.tfApp.android.newstv.view.custom.PinEntryEditText
        android:id="@+id/edit_otp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="@dimen/_12ssp"
        app:pinBackgroundIsSquare="false"
        app:pinLineColors="@color/white"
        app:pinLineStroke="@dimen/_2sdp"
        app:pinTextBottomPadding="@dimen/_5sdp" />

    <com.balysv.materialripple.MaterialRippleLayout
        rv_centered="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:padding="@dimen/_3sdp"
        app:mrl_rippleAlpha="0.4"
        app:mrl_rippleColor="@color/white"
        app:mrl_rippleOverlay="true">

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/btn_proceed"
        rv_centered="true"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:mrl_rippleAlpha="0.4"
        app:mrl_rippleColor="@color/black"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/btn_color"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/proceed"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/ic_action_next_hint" />

        </LinearLayout>


    </com.balysv.materialripple.MaterialRippleLayout>
</LinearLayout>