<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_35sdp">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:src="@drawable/rsz_download24" />

        <android.support.design.widget.TextInputLayout
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/email"

                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="16"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_proceed"
            rv_centered="true"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:mrl_rippleAlpha="0.4"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/btn_color"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/get_otp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@drawable/ic_action_next_hint" />

            </LinearLayout>


        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

</LinearLayout>