<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    >
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
     <RelativeLayout
         android:id="@+id/detail_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/youtube_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:filterTouchesWhenObscured="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_weight="1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@color/black_video_overlay"
                android:gravity="center">

                <ImageView
                    android:visibility="visible"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:src="@drawable/ic_action_play" />
            </LinearLayout>
        </RelativeLayout>
    <LinearLayout
        android:id="@+id/lv_details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:textColor="@color/white"
                android:text="NEW"
                android:padding="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="2018"
                android:visibility="invisible"
                android:padding="@dimen/_10sdp"/>
            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:background="@color/white"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/text_viewers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/white"
                android:text="25+"
                android:padding="@dimen/_10sdp"/>
            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:background="@color/white"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="1h 20m"
                android:padding="@dimen/_10sdp"/>
<LinearLayout
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_play"
        android:layout_width="@dimen/_20sdp"
        android:visibility="invisible"
        android:layout_height="@dimen/_20sdp"
        android:layout_gravity="center"
        android:src="@drawable/play_button" />
</LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:padding="@dimen/_5sdp"
            android:gravity="left"
            android:text="1.5k views"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:visibility="gone"
            android:gravity="center"
            android:padding="@dimen/_1sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/myList_image"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/my_list" />

                <TextView
                    android:id="@+id/myList_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/my_list" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/rating" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/my_rate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/my_share" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/my_download" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            android:layout_height="wrap_content" />
      </LinearLayout>
    </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>