<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@null"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:id="@+id/deviceInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_1sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewAboutPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="@dimen/_5sdp"
                        android:gravity="start"
                        android:background="@color/black"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:padding="0dp"
                        android:text="@string/about_device"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="@font/montserrat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textViewModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:background="@color/bottom_menu_bar"
                    android:maxLines="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/app_name"
                    />


                <TextView
                    android:id="@+id/textViewVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:background="@color/bottom_menu_bar"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/app_name"
                     />

                <TextView
                    android:id="@+id/textViewBuild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    android:background="@color/bottom_menu_bar"
                    android:fontFamily="@font/montserrat"
                    android:maxLines="1"
                    android:text="@string/app_name"
                     />

                <TextView
                    android:id="@+id/textViewSeriel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:background="@color/bottom_menu_bar"
                    android:fontFamily="@font/montserrat"
                    android:maxLines="1"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/app_name" />
            </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/deviceInfo"
                    app:layout_constraintVertical_bias="0.0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/textViewAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:gravity="start"
                            android:maxLines="1"
                            android:paddingStart="@dimen/_10sdp"
                            android:text="@string/about_account"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/uEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:paddingStart="@dimen/_10sdp"
                        android:textSize="@dimen/_10sdp"
                        android:paddingTop="@dimen/_15sdp"
                        android:background="@color/bottom_menu_bar"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/_15sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/app_name"
                         />
                </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/deviceInfo"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deviceInfo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewVersionHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:padding="0dp"
                        android:paddingStart="@dimen/_10sdp"
                        android:background="@color/black"
                        android:text="@string/about_version"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>


                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:background="@color/bottom_menu_bar"
                    android:maxLines="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/app_name" />

            </LinearLayout>
            </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>